--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/**/*.py": {
-      "runtime": "python3.11"
+      "runtime": "python@3.11.0"
     }
   },
   "routes": [
